removed links from navbar on appropriate pages, moved profile link into navbar

--- a/src/components/Navigator/Navigator.css
+++ b/src/components/Navigator/Navigator.css
@@ -1,5 +1,5 @@
 
-.container-fluid {
-	padding-left: 0px;
-	padding-right: 0px;
+.navbar-dark .navbar-nav .nav-link {
+	color: #EE5F46;
+	cursor: pointer;
 }
