--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,14 @@
 .swipetext {
-	position: absolute;
-	bottom: 20.43px;
+	position: relative;
+	bottom: 9.43px;
 	text-transform: uppercase;
 	font-size: 12vw;
 	width: 100%;
 	font-weight: 700;
+	font-style: italic;
+	background-color: transparent;
 }
+ .container-fluid {
+ 	position: absolute;
+ 	
+ }
