--- a/src/components/Card/Cards.css
+++ b/src/components/Card/Cards.css
@@ -10,3 +10,10 @@ img {
 img:hover {
 	transform: scale(1.05);
 }
+
+.displayCard {
+	padding: 10px 0px 10px 15px;
+	border: 1px solid #DFDFDF;
+	cursor: pointer;
+	overflow: auto;
+}
