--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,3 +3,18 @@ background-image: url(https://ak4.picdn.net/shutterstock/videos/15333634/thumb/1
 background-size:2500px;
 background-repeat: no-repeat;
 }
+
+.fStyle {
+	color:grey;
+}
+
+.iStyle {
+	background-color: grey;
+}
+.imgStyle {
+	margin: 200px;
+}
+
+.input-group-addon {
+	color: blue;
+}
